# dmarc

./: .gitattributes  .gitignore  .halonignore  CMakeLists.txt  README.md  dmarc.hsl  main.hsl  tests.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  supervisord.conf
.devcontainer/smtpd/src/config/: smtpd-app.yaml  smtpd.yaml
tests/: aligned.hsl  dnswalk.hsl  dnswalk2.hsl  dnswalk3.hsl  dnswalk4.hsl  dnswalk5.hsl  dnswalk6.hsl  dnswalk7.hsl  dnswalk_multiple_records.hsl  dnswalkdomains.hsl  error.hsl  error2.hsl  error3.hsl  error4.hsl  error5.hsl  error6.hsl  error7.hsl  error8.hsl  invalid_np_no_rua.hsl  invalid_np_with_rua.hsl  invalid_p_no_rua.hsl  invalid_p_with_rua.hsl  many_dkim.hsl  many_dkim2.hsl  many_dkim3.hsl  many_dkim4.hsl  no_dkim_no_spf.hsl  no_dkim_with_spf.hsl  no_spf_no_dkim.hsl  no_spf_no_dkim_another_pd.hsl  no_spf_with_dkim.hsl  organizational_domain.hsl  organizational_domain2.hsl  organizational_domain3.hsl  organizational_domain4.hsl  organizational_domain5.hsl  policy.hsl  policy2.hsl  rfc7489_b_1_1_a.hsl  rfc7489_b_1_1_b.hsl  (+12 more)
