CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT("dmarc" VERSION 1.1.2)

IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt")
	FILE(STRINGS ${CMAKE_CURRENT_BINARY_DIR}/OSRELEASE.txt OSRELEASE)
ELSEIF (EXISTS "/OSRELEASE.txt")
	FILE(STRINGS /OSRELEASE.txt OSRELEASE)
ELSE()
	MESSAGE(FATAL_ERROR "Missing OSRELEASE")
ENDIF()

IF (OSRELEASE MATCHES "ROCKY8")
	SET(CPACK_GENERATOR "RPM")
ELSEIF (OSRELEASE MATCHES "ROCKY9")
	SET(CPACK_GENERATOR "RPM")
ELSEIF (OSRELEASE MATCHES "ROCKY10")
	SET(CPACK_GENERATOR "RPM")
ELSEIF (OSRELEASE MATCHES "AZURE3")
	SET(CPACK_GENERATOR "RPM")
ELSEIF (OSRELEASE MATCHES "UBU2204")
	SET(CPACK_GENERATOR "DEB")
ELSEIF (OSRELEASE MATCHES "UBU2404")
	SET(CPACK_GENERATOR "DEB")
ELSEIF (OSRELEASE MATCHES "UBU2604")
	SET(CPACK_GENERATOR "DEB")
ELSE()
	MESSAGE(FATAL_ERROR "Invalid OSRELEASE")
ENDIF()

IF (OSRELEASE MATCHES "^(CENTOS8|ROCKY8|ROCKY9|UBU2204|UBU2404|AZURE3)$")
	SET(HALON_PACKAGE "halon")
ELSE()
	SET(HALON_PACKAGE "halon-smtpd")
ENDIF()

IF (EXISTS "${CMAKE_CURRENT_BINARY_DIR}/SYSTEM_NAME.txt")
	FILE(STRINGS ${CMAKE_CURRENT_BINARY_DIR}/SYSTEM_NAME.txt SYSTEM_NAME)
ELSE()
	MESSAGE(FATAL_ERROR "Missing SYSTEM_NAME")
ENDIF()

SET(CMAKE_INSTALL_PREFIX "/opt/halon")
SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/halon")

INSTALL(FILES "LICENSE" DESTINATION "share/doc/plugins/hsl/${PROJECT_NAME}")
INSTALL(FILES "dmarc.hsl" DESTINATION "plugins/hsl/${PROJECT_NAME}")
INSTALL(FILES "main.hsl" DESTINATION "plugins/hsl/${PROJECT_NAME}")

IF (CPACK_GENERATOR MATCHES "DEB")
	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "${HALON_PACKAGE} (>= 5.10)")
ENDIF()
IF (CPACK_GENERATOR MATCHES "RPM")
	SET(CPACK_RPM_PACKAGE_REQUIRES "${HALON_PACKAGE} >= 5.10")
ENDIF()

SET(CPACK_PACKAGE_NAME "halon-extras-${PROJECT_NAME}")
SET(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Halon extras DMARC")
SET(CPACK_PACKAGE_DESCRIPTION "Halon extras DMARC")
SET(CPACK_PACKAGE_CONTACT "Halon support@halon.io")
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PROJECT_VERSION}-${SYSTEM_NAME}")

SET(CPACK_DEBIAN_PACKAGE_SECTION "mail")

INCLUDE(CPack)